Add html header structure, add global styles link bootstrap grid

--- a/index.html
+++ b/index.html
@@ -6,12 +6,48 @@
     <title>Travello</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="vendor/bootstrap-grid.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
 
   <body>
-    
+    <header>
+      <div class="container">
+        <div class="navbar row">
+          <div class="logo col-1">
+            <img href="https://i.postimg.cc/x1Pgjby3/world-map-globe-travel-png-favpng-zh7hr-RQfuw-Fn-UF5yw-KRtmmu-AS.jpg">
+          </div>
+          <div class="navbar-menu col-6">
+            <div class="navbtn">
+              <a href="#">HOME</a>
+            </div>
+            <div class="navbtn-menu">
+              <a href="#">SERVICES</a>
+            </div>
+            <div class="navbtn-menu">
+              <a href="#">PORTFOLIO</a>
+            </div>
+            <div class="navbtn-menu">
+              <a href="#">ABOUT</a>
+            </div>
+            <div class="navbtn-menu">
+              <a href="#">CONTACT</a>
+            </div>
+          </div>
+        </div>
+        <div class="welcometxt">
+          <h2>Welcome to Our Agency</h2>
+          <h1>IT'S NICE TO SEE YOU HERE</h1>
+          <div class="btn-welcome">
+            <a href="#">TELL ME MORE</a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+
   </body>
 
 </html>
