Add styles for splash improve html for splash

--- a/index.html
+++ b/index.html
@@ -13,36 +13,34 @@
   </head>
 
   <body>
-    <header>
+    <header class="splash">
       <div class="container">
         <div class="navbar row">
           <div class="logo col-1">
-            <img href="https://i.postimg.cc/x1Pgjby3/world-map-globe-travel-png-favpng-zh7hr-RQfuw-Fn-UF5yw-KRtmmu-AS.jpg">
+            <img src="#" alt="image">
           </div>
-          <div class="navbar-menu col-6">
+          <div class="row navbar-menu col-7">
             <div class="navbtn">
-              <a href="#">HOME</a>
+              <a class="btn-link btn-nav" href="#">HOME</a>
             </div>
-            <div class="navbtn-menu">
-              <a href="#">SERVICES</a>
+            <div class="navbtn">
+              <a class="btn-link btn-nav" href="#">SERVICES</a>
             </div>
-            <div class="navbtn-menu">
-              <a href="#">PORTFOLIO</a>
+            <div class="navbtn">
+              <a class="btn-link btn-nav" href="#">PORTFOLIO</a>
             </div>
-            <div class="navbtn-menu">
-              <a href="#">ABOUT</a>
+            <div class="navbtn">
+              <a class="btn-link btn-nav" href="#">ABOUT</a>
             </div>
-            <div class="navbtn-menu">
-              <a href="#">CONTACT</a>
+            <div class="navbtn">
+              <a class="btn-link btn-nav" href="#">CONTACT</a>
             </div>
           </div>
         </div>
-        <div class="welcometxt">
-          <h2>Welcome to Our Agency</h2>
+        <div class="welcometxt row">
+          <h2>Welcome to Our Agency!</h2>
           <h1>IT'S NICE TO SEE YOU HERE</h1>
-          <div class="btn-welcome">
-            <a href="#">TELL ME MORE</a>
-          </div>
+          <a class="btn-link btn-tellmore" href="#">TELL ME MORE</a>
         </div>
       </div>
     </header>
