Improve splash styles and html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="navbar row">
           <div class="logo col-1">
-            <img src="#" alt="image">
+            <i class="pagelogo fas fa-plane"></i>
           </div>
           <div class="row navbar-menu col-7">
             <div class="navbtn">
