add services html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,39 @@
       </div>
     </header>
 
+    <section class="services">
+      <div class="container">
+        <div class="section-title">
+          <h3>SERVICES</h3>
+          <p>Nullam non nulla eu ligula pharetra.</p>
+        </div>
+        <div class="row row-services">
+          <div class="col-4 service">
+            <i class="fas fa-plane"></i>
+            <h4>Flights</h4>
+            <p>Aenean purus purus, pretium et placerat ut,<br>
+            condimentum id ipsum. Duis eu neque egestas,<br>
+            bibendum ex quis, mattis nulla.
+          </div>
+          <div class="col-4 service row">
+            <i class="fas fa-hotel"></i>
+            <h4>Hotels</h4>
+            <p>Aenean purus purus, pretium et placerat ut,<br>
+            condimentum id ipsum. Duis eu neque egestas,<br>
+            bibendum ex quis, mattis nulla.
+          </div>
+          <div class="col-4 service row">
+            <i class="fas fa-paw"></i>
+            <h4>Guide</h4>
+            <p>Aenean purus purus, pretium et placerat ut,<br>
+            condimentum id ipsum. Duis eu neque egestas,<br>
+            bibendum ex quis, mattis nulla.
+          </div>
+        </div>
+      </div>
+    </section>
+
+
 
   </body>
 
