add services styles

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             condimentum id ipsum. Duis eu neque egestas,<br>
             bibendum ex quis, mattis nulla.
           </div>
-          <div class="col-4 service row">
+          <div class="col-4 service">
             <i class="fas fa-hotel"></i>
             <h4>Hotels</h4>
             <p>Aenean purus purus, pretium et placerat ut,<br>
             condimentum id ipsum. Duis eu neque egestas,<br>
             bibendum ex quis, mattis nulla.
           </div>
-          <div class="col-4 service row">
+          <div class="col-4 service">
             <i class="fas fa-paw"></i>
             <h4>Guide</h4>
             <p>Aenean purus purus, pretium et placerat ut,<br>
