--- a/index.html
+++ b/index.html
@@ -85,60 +85,72 @@
         </div>
         <div class="row-trips row row-trips-1">
           <div class="trip col-4">
-            <div class="img-trip">
-              <img src="https://i.postimg.cc/141sN0MX/sydney-opera-house-australia-1878293.jpg" alt="image">
-            </div>
-            <div class="caption-trip">
-              <h4>Australia</h4>
-              <p>2 weeks</p>
-            </div>
+            <a class="link-trip" href="#">
+              <div class="img-trip">
+                <img src="https://i.postimg.cc/141sN0MX/sydney-opera-house-australia-1878293.jpg" alt="image">
+              </div>
+              <div class="caption-trip">
+                <h4>Australia</h4>
+                <p>2 weeks</p>
+              </div>
+            </a>
           </div>
           <div class="trip col-4">
-            <div class="img-trip">
-              <img src="https://i.postimg.cc/FRt46V5Z/man-standing-on-grass-near-the-ocean-1686657.jpg" alt="image">
-            </div>
-            <div class="caption-trip ">
-              <h4>South America</h4>
-              <p>1 month</p>
-            </div>
+            <a class="link-trip" href="#">
+              <div class="img-trip">
+                <img src="https://i.postimg.cc/FRt46V5Z/man-standing-on-grass-near-the-ocean-1686657.jpg" alt="image">
+              </div>
+              <div class="caption-trip ">
+                <h4>South America</h4>
+                <p>1 month</p>
+              </div>
+            </a>
           </div>
           <div class="trip col-4">
-            <div class="img-trip">
-              <img src="https://i.postimg.cc/VLhH4Lc9/america-ancient-architecture-art-356844.jpg" alt="image">
-            </div>
-            <div class="caption-trip">
-              <h4>USA</h4>
-              <p>1 weeks</p>
-            </div>
+            <a class="link-trip" href="#">
+              <div class="img-trip">
+                <img src="https://i.postimg.cc/VLhH4Lc9/america-ancient-architecture-art-356844.jpg" alt="image">
+              </div>
+              <div class="caption-trip">
+                <h4>USA</h4>
+                <p>1 weeks</p>
+              </div>
+            </a>
           </div>
         </div>
         <div class="row-trips row">
           <div class="trip col-4">
-            <div class="img-trip">
-              <img src="https://i.postimg.cc/tJMDrD8R/city-continent-country-destination-269790.jpg" alt="image">
-            </div>
-            <div class="caption-trip">
-              <h4>Europe by Road</h4>
-              <p>2 weeks</p>
-            </div>
+            <a class="link-trip" href="#">
+              <div class="img-trip">
+                <img src="https://i.postimg.cc/tJMDrD8R/city-continent-country-destination-269790.jpg" alt="image">
+              </div>
+              <div class="caption-trip">
+                <h4>Europe by Road</h4>
+                <p>2 weeks</p>
+              </div>
+            </a>
           </div>
           <div class="trip col-4">
-            <div class="img-trip">
-              <img src="https://i.postimg.cc/vBPvB3Y7/agriculture-asia-countryside-cropland-235731.jpg" alt="image">
-            </div>
-            <div class="caption-trip">
-              <h4>Vietnam</h4>
-              <p>2 weeks</p>
-            </div>
+            <a class="link-trip" href="#">
+              <div class="img-trip">
+                <img src="https://i.postimg.cc/vBPvB3Y7/agriculture-asia-countryside-cropland-235731.jpg" alt="image">
+              </div>
+              <div class="caption-trip">
+                <h4>Vietnam</h4>
+                <p>2 weeks</p>
+              </div>
+            </a>
           </div>
           <div class="trip col-4">
-            <div class="img-trip">
-              <img src="https://i.postimg.cc/yxtXhxSk/photo-of-group-of-men-wearing-assorted-scarves-holding-667200.jpg" alt="image">
-            </div>
-            <div class="caption-trip">
-              <h4>Africa</h4>
-              <p>2 weeks</p>
-            </div>
+            <a class="link-trip" href="#">
+              <div class="img-trip">
+                <img src="https://i.postimg.cc/yxtXhxSk/photo-of-group-of-men-wearing-assorted-scarves-holding-667200.jpg" alt="image">
+              </div>
+              <div class="caption-trip">
+                <h4>Africa</h4>
+                <p>2 weeks</p>
+              </div>
+            </a>
           </div>
         </div>
 
