add footer html

--- a/index.html
+++ b/index.html
@@ -156,6 +156,22 @@
       </div>
     </section>
 
+    <footer>
+      <div class="container">
+        <div class="row row-footer">
+          <div class="col-4 copyright">
+            <p>© Copyright 2020 Franek Zawada</p>
+          </div>
+          <div class="col-4 socialmedia">
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-pinterest-p"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
+
 
 
   </body>
