add footer styles

--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
       </div>
     </section>
 
-    <footer>
+    <footer class="footer">
       <div class="container">
         <div class="row row-footer">
           <div class="col-4 copyright">
             <p>© Copyright 2020 Franek Zawada</p>
           </div>
           <div class="col-4 socialmedia">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-pinterest-p"></i>
+            <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+            <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+            <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
+            <a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a>
           </div>
         </div>
       </div>
