Fix html and styles Add RWD

--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <header class="splash">
       <div class="container">
         <div class="navbar row">
-          <div class="logo col-1">
-            <i class="pagelogo fas fa-plane"></i>
+          <div class="logo col-md-1">
+            <i class="fas fa-plane"></i>
           </div>
-          <div class="row navbar-menu col-7">
-            <div class="navbtn">
-              <a class="btn-link btn-nav" href="#">HOME</a>
+          <div class="navbar-menu row col-12 col-md-7">
+            <div class="btn-nav">
+              <a class="btn-link" href="#">HOME</a>
             </div>
-            <div class="navbtn">
-              <a class="btn-link btn-nav" href="#">SERVICES</a>
+            <div class="btn-nav">
+              <a class="btn-link" href="#">SERVICES</a>
             </div>
-            <div class="navbtn">
-              <a class="btn-link btn-nav" href="#">PORTFOLIO</a>
+            <div class="btn-nav">
+              <a class="btn-link" href="#">PORTFOLIO</a>
             </div>
-            <div class="navbtn">
-              <a class="btn-link btn-nav" href="#">ABOUT</a>
+            <div class="btn-nav">
+              <a class="btn-link" href="#">ABOUT</a>
             </div>
-            <div class="navbtn">
-              <a class="btn-link btn-nav" href="#">CONTACT</a>
+            <div class="btn-nav">
+              <a class="btn-link" href="#">CONTACT</a>
             </div>
           </div>
         </div>
-        <div class="welcometxt row">
+        <div class="welcome-txt row">
           <h2>Welcome to Our Agency!</h2>
           <h1>IT'S NICE TO SEE YOU HERE</h1>
           <a class="btn-link btn-tellmore" href="#">TELL ME MORE</a>
@@ -52,26 +52,26 @@
           <p>Nullam non nulla eu ligula pharetra.</p>
         </div>
         <div class="row row-services">
-          <div class="col-4 service">
+          <div class="col-md-4 service">
             <i class="fas fa-plane"></i>
             <h4>Flights</h4>
             <p>Aenean purus purus, pretium et placerat ut,<br>
             condimentum id ipsum. Duis eu neque egestas,<br>
-            bibendum ex quis, mattis nulla.
+            bibendum ex quis, mattis nulla.</p>
           </div>
-          <div class="col-4 service">
+          <div class="col-md-4 service">
             <i class="fas fa-hotel"></i>
             <h4>Hotels</h4>
             <p>Aenean purus purus, pretium et placerat ut,<br>
             condimentum id ipsum. Duis eu neque egestas,<br>
-            bibendum ex quis, mattis nulla.
+            bibendum ex quis, mattis nulla.</p>
           </div>
-          <div class="col-4 service">
+          <div class="col-md-4 service">
             <i class="fas fa-paw"></i>
             <h4>Guide</h4>
             <p>Aenean purus purus, pretium et placerat ut,<br>
             condimentum id ipsum. Duis eu neque egestas,<br>
-            bibendum ex quis, mattis nulla.
+            bibendum ex quis, mattis nulla.</p>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
           <p>Nullam non nulla eu ligula pharetra.</p>
         </div>
         <div class="row-trips row row-trips-1">
-          <div class="trip col-4">
+          <div class="trip col-md-4">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/141sN0MX/sydney-opera-house-australia-1878293.jpg" alt="image">
@@ -95,7 +95,7 @@
               </div>
             </a>
           </div>
-          <div class="trip col-4">
+          <div class="trip col-md-4">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/FRt46V5Z/man-standing-on-grass-near-the-ocean-1686657.jpg" alt="image">
@@ -106,7 +106,7 @@
               </div>
             </a>
           </div>
-          <div class="trip col-4">
+          <div class="trip col-md-4">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/VLhH4Lc9/america-ancient-architecture-art-356844.jpg" alt="image">
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="row-trips row">
-          <div class="trip col-4">
+          <div class="trip col-md-4">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/tJMDrD8R/city-continent-country-destination-269790.jpg" alt="image">
@@ -130,7 +130,7 @@
               </div>
             </a>
           </div>
-          <div class="trip col-4">
+          <div class="trip col-md-4">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/vBPvB3Y7/agriculture-asia-countryside-cropland-235731.jpg" alt="image">
@@ -141,7 +141,7 @@
               </div>
             </a>
           </div>
-          <div class="trip col-4">
+          <div class="trip col-md-4">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/yxtXhxSk/photo-of-group-of-men-wearing-assorted-scarves-holding-667200.jpg" alt="image">
@@ -159,10 +159,10 @@
     <footer class="footer">
       <div class="container">
         <div class="row row-footer">
-          <div class="col-4 copyright">
+          <div class="col-md-4 copyright">
             <p>© Copyright 2020 Franek Zawada</p>
           </div>
-          <div class="col-4 socialmedia">
+          <div class="col-md-4 social-media">
             <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
             <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
             <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
