--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <h3>OUR TRIPS</h3>
           <p>Nullam non nulla eu ligula pharetra.</p>
         </div>
-        <div class="row-trips row row-trips-1">
+        <div class="row-trips row">
           <div class="trip col-md-4">
             <a class="link-trip" href="#">
               <div class="img-trip">
