--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
           <p>Nullam non nulla eu ligula pharetra.</p>
         </div>
         <div class="row row-services">
-          <div class="col-md-4 service">
+          <div class="col col-md-4 service">
             <i class="fas fa-plane"></i>
             <h4>Flights</h4>
-            <p>Aenean purus purus, pretium et placerat ut,<br>
-            condimentum id ipsum. Duis eu neque egestas,<br>
+            <p>Aenean purus purus, pretium et placerat ut,
+            condimentum id ipsum. Duis eu neque egestas,
             bibendum ex quis, mattis nulla.</p>
           </div>
-          <div class="col-md-4 service">
+          <div class="col col-md-4 service">
             <i class="fas fa-hotel"></i>
             <h4>Hotels</h4>
-            <p>Aenean purus purus, pretium et placerat ut,<br>
-            condimentum id ipsum. Duis eu neque egestas,<br>
+            <p>Aenean purus purus, pretium et placerat ut,
+            condimentum id ipsum. Duis eu neque egestas,
             bibendum ex quis, mattis nulla.</p>
           </div>
-          <div class="col-md-4 service">
+          <div class="col col-md-4 service">
             <i class="fas fa-paw"></i>
             <h4>Guide</h4>
-            <p>Aenean purus purus, pretium et placerat ut,<br>
-            condimentum id ipsum. Duis eu neque egestas,<br>
+            <p>Aenean purus purus, pretium et placerat ut,
+            condimentum id ipsum. Duis eu neque egestas,
             bibendum ex quis, mattis nulla.</p>
           </div>
         </div>
@@ -84,7 +84,7 @@
           <p>Nullam non nulla eu ligula pharetra.</p>
         </div>
         <div class="row-trips row">
-          <div class="trip col-md-4">
+          <div class="trip col col-lg-4 col-md-6">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/141sN0MX/sydney-opera-house-australia-1878293.jpg" alt="image">
@@ -95,7 +95,7 @@
               </div>
             </a>
           </div>
-          <div class="trip col-md-4">
+          <div class="trip col col-lg-4 col-md-6">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/FRt46V5Z/man-standing-on-grass-near-the-ocean-1686657.jpg" alt="image">
@@ -106,7 +106,7 @@
               </div>
             </a>
           </div>
-          <div class="trip col-md-4">
+          <div class="trip col col-lg-4 col-md-6">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/VLhH4Lc9/america-ancient-architecture-art-356844.jpg" alt="image">
@@ -117,9 +117,7 @@
               </div>
             </a>
           </div>
-        </div>
-        <div class="row-trips row">
-          <div class="trip col-md-4">
+          <div class="trip col col-lg-4 col-md-6">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/tJMDrD8R/city-continent-country-destination-269790.jpg" alt="image">
@@ -130,7 +128,7 @@
               </div>
             </a>
           </div>
-          <div class="trip col-md-4">
+          <div class="trip col col-lg-4 col-md-6">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/vBPvB3Y7/agriculture-asia-countryside-cropland-235731.jpg" alt="image">
@@ -141,7 +139,7 @@
               </div>
             </a>
           </div>
-          <div class="trip col-md-4">
+          <div class="trip col col-lg-4 col-md-6">
             <a class="link-trip" href="#">
               <div class="img-trip">
                 <img src="https://i.postimg.cc/yxtXhxSk/photo-of-group-of-men-wearing-assorted-scarves-holding-667200.jpg" alt="image">
@@ -159,10 +157,10 @@
     <footer class="footer">
       <div class="container">
         <div class="row row-footer">
-          <div class="col-md-4 copyright">
+          <div class="col col-lg-4 copyright">
             <p>© Copyright 2020 Franek Zawada</p>
           </div>
-          <div class="col-md-4 social-media">
+          <div class="col col-lg-4 social-media">
             <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
             <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
             <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
